--- a/WhatShoudIEat/Base.lproj/Main.storyboard
+++ b/WhatShoudIEat/Base.lproj/Main.storyboard
@@ -89,17 +89,17 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e2N-wz-aAi">
-                                                    <rect key="frame" x="174" y="29" width="220" height="0.0"/>
+                                                    <rect key="frame" x="174" y="36" width="220" height="0.0"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tiV-7g-3F8">
-                                                    <rect key="frame" x="174" y="8" width="240" height="21"/>
+                                                    <rect key="frame" x="174" y="8" width="240" height="28"/>
                                                     <attributedString key="attributedText">
                                                         <fragment content="Label">
                                                             <attributes>
-                                                                <font key="NSFont" metaFont="system" size="17"/>
+                                                                <font key="NSFont" size="24" name=".SFNSText"/>
                                                             </attributes>
                                                         </fragment>
                                                     </attributedString>
@@ -146,12 +146,13 @@
                                     <constraint firstAttribute="width" constant="221" id="he1-Kf-8h9"/>
                                     <constraint firstAttribute="height" constant="63" id="jU7-8O-q3X"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Random">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="10"/>
+                                        <integer key="value" value="8"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
@@ -189,33 +190,57 @@
         <!--Food View Controller-->
         <scene sceneID="tzO-Qi-ZvB">
             <objects>
-                <viewController id="W1w-6j-uWQ" customClass="FoodViewController" customModule="WhatShoudIEat" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FoodViewController" id="W1w-6j-uWQ" customClass="FoodViewController" customModule="WhatShoudIEat" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0os-xf-6vh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HQS-yL-wNy">
-                                <rect key="frame" x="20" y="110" width="374" height="374"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HQS-yL-wNy">
+                                <rect key="frame" x="20" y="60" width="374" height="374"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="HQS-yL-wNy" secondAttribute="height" multiplier="1:1" id="U50-4T-dB5"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A98-7w-OYk">
-                                <rect key="frame" x="57" y="516" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A98-7w-OYk">
+                                <rect key="frame" x="20" y="466" width="374" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="S8P-cY-0KK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5q-u4-icS">
-                                <rect key="frame" x="57" y="568" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5q-u4-icS">
+                                <rect key="frame" x="20" y="527" width="374" height="20.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="gkm-0a-cS2"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="g5q-u4-icS" firstAttribute="top" secondItem="A98-7w-OYk" secondAttribute="bottom" constant="32" id="074-jV-u2r"/>
+                            <constraint firstItem="HQS-yL-wNy" firstAttribute="leading" secondItem="H9p-kk-0m7" secondAttribute="leading" constant="20" id="KPF-t5-XpN"/>
+                            <constraint firstItem="A98-7w-OYk" firstAttribute="leading" secondItem="H9p-kk-0m7" secondAttribute="leading" constant="20" id="Kc2-aa-dT7"/>
+                            <constraint firstItem="g5q-u4-icS" firstAttribute="top" secondItem="A98-7w-OYk" secondAttribute="bottom" constant="32" id="RvK-7U-yCp"/>
+                            <constraint firstItem="HQS-yL-wNy" firstAttribute="top" secondItem="H9p-kk-0m7" secondAttribute="top" constant="16" id="msO-Jz-T4d"/>
+                            <constraint firstItem="H9p-kk-0m7" firstAttribute="trailing" secondItem="HQS-yL-wNy" secondAttribute="trailing" constant="20" id="nKC-P9-vmx"/>
+                            <constraint firstItem="g5q-u4-icS" firstAttribute="leading" secondItem="H9p-kk-0m7" secondAttribute="leading" constant="20" id="nnS-EE-VQ1"/>
+                            <constraint firstItem="A98-7w-OYk" firstAttribute="top" secondItem="HQS-yL-wNy" secondAttribute="bottom" constant="32" id="rfT-Ty-0Ho"/>
+                            <constraint firstItem="H9p-kk-0m7" firstAttribute="trailing" secondItem="A98-7w-OYk" secondAttribute="trailing" constant="20" id="sgx-aB-uNb"/>
+                            <constraint firstItem="A98-7w-OYk" firstAttribute="top" secondItem="HQS-yL-wNy" secondAttribute="bottom" constant="32" id="xnA-hB-ctA"/>
+                            <constraint firstItem="H9p-kk-0m7" firstAttribute="trailing" secondItem="g5q-u4-icS" secondAttribute="trailing" constant="20" id="zNI-Bo-gt9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="H9p-kk-0m7"/>
                     </view>
+                    <connections>
+                        <outlet property="foodInfoDescriptionLabel" destination="g5q-u4-icS" id="ir7-Ft-fgV"/>
+                        <outlet property="foodInfoImage" destination="HQS-yL-wNy" id="RnL-J0-adT"/>
+                        <outlet property="foodInfoTitleLabel" destination="A98-7w-OYk" id="yea-Uf-D9J"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nJA-Fy-OHu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
